# guideXOS-Hypervisor

./: .gitignore  BUILD_AND_TEST_ISO_PARSER.md  CMakeLists.txt  COMPLETE_CPP_LOGGING.md  COMPLETE_SUCCESS_SUMMARY.md  CONSOLE_NOW_ENABLED.md  DECODER_COMPLETE_FINAL_SUMMARY.md  ERRORS_FIXED.md  FINAL_JSON_FIX.md  FIXING_CPP_ERRORS.md  FIX_DLL_EXPORT_ERRORS.md  FIX_SUMMARY.md  FOUND_THE_BUG.md  HOW_TO_BOOT_FROM_ISO.md  ISO_BOOT_COMPLETE.md  OUTPUT_LOG_ANALYSIS_AND_NEXT_STEPS.md  README.md  UpgradeLog.htm  UpgradeLog2.htm  VISUAL_STUDIO_FIX.md  VM_NOT_BOOTING_SOLUTION.md  VM_RUNNING_NEXT_STEPS.md  WHY_VM_DOESNT_BOOT.md  boot_harness_0826.transcript.txt  boot_harness_1140.transcript.txt  boot_harness_20260628_233834.err.txt  boot_harness_20260629_1.err.txt  boot_harness_20260629_2.err.txt  boot_harness_20260629_2.out.txt  boot_harness_child_20260627_2030.out.txt  boot_harness_child_20260628_0716.transcript.txt  boot_harness_child_20260628_0716b.transcript.txt  boot_harness_child_20260628_1122.err.txt  boot_harness_child_20260628_1124.err.txt  boot_harness_child_20260628_1126.err.txt  boot_harness_child_20260628_1126.out.txt  boot_harness_cmd_1142.txt  boot_harness_detached_20260628_181406.out.txt  boot_harness_latest.out.txt  boot_harness_proc.err.txt  (+40 more)
.codex_tmp/: bootia64_exact.efi
.codex_tmp/EfiBootHarness/: Program.cs
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-mingw/manual/: guideXOS_Hypervisor.link.rsp
build-riscv/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cmake-build/: CMakeCache.txt
docs/: 24536301.txt  ALL_DECODERS_COMPLETE.md  API_DOCUMENTATION.md  API_IMPLEMENTATION_SUMMARY.md  BARE_METAL_IMPLEMENTATION_SUMMARY.md  BINARY_DECODER_COMPLETE.md  BINARY_DECODER_IMPLEMENTATION_GUIDE.md  BOOTIMG_FALLBACK_IMPLEMENTATION.md  BOOTSTRAP_INITIALIZATION.md  BOOTSTRAP_QUICK_START.md  BOOT_ANALYSIS_AND_FIXES.md  BOOT_STATE_MACHINE.md  BOOT_STATE_MACHINE_QUICK_REF.md  BOOT_STATE_MACHINE_SUMMARY.md  BOOT_TRACE_AND_PANIC.md  BOOT_TRACE_QUICK_REF.md  BUILD_DLL_INSTRUCTIONS.md  BUILD_ERRORS_FINAL_FIX.md  BUILD_ERRORS_FIXED.md  BUILD_FIX_QUICK.md  BUILD_FIX_SUMMARY.md  BUILD_ISSUES_SUMMARY.md  COMPLETE_STATUS.md  CORE_PROJECT_FIXED.md  CPU_IMPLEMENTATION.md  CRITICAL_MEMORY_ISSUE_ANALYSIS.md  CURRENT_STATUS_ANALYSIS.md  DECODER_CHANGES_QUICK_REF.md  DECODER_IMPROVEMENTS_SUMMARY.md  DIAGNOSTIC_LOGGING_ADDED.md  DLL_LINKER_ERRORS_FIX.md  DLL_MISSING_SUMMARY.md  EFI_INDIRECT_ENTRY_POINT_FIX.md  ELF64_LOADER.md  ELF_VALIDATION.md  ELF_VALIDATION_SUMMARY.md  ENHANCED_DIAGNOSTIC.md  ENTRY_POINT_ANALYSIS.md  EXECUTION_LOOP_IMPLEMENTATION.md  FINAL_ANALYSIS_OUTPUT_LOG_REEXAMINATION.md  (+76 more)
docs/riscv/: rv64-decoder-status.txt
examples/: bare_metal_example.cpp  boot_state_machine_example.cpp  boot_trace_example.cpp  config_example.cpp  initramfs_example.cpp  kernel_validation_example.cpp  profiler_example.cpp  virtual_devices_example.cpp  virtual_disk_example.cpp  vm_snapshot_example.cpp  webui_example.cpp
examples/configs/: minimal-vm.json  server-vm.json  standard-vm.json
guideXOS Hypervisor GUI/: App.xaml  App.xaml.cs  GlobalUsings.cs  MainWindow.xaml  MainWindow.xaml.cs  guideXOS Hypervisor GUI.csproj
guideXOS Hypervisor GUI/Converters/: ValueConverters.cs
guideXOS Hypervisor GUI/Models/: DebuggerModels.cs  SnapshotModels.cs  VMSettingsModel.cs  VMStateModel.cs
guideXOS Hypervisor GUI/Services/: AppLoggingService.cs  ThemeManager.cs  VMManagerWrapper.cs  VMPersistenceService.cs
guideXOS Hypervisor GUI/Themes/: DarkTheme.xaml  LightTheme.xaml
guideXOS Hypervisor GUI/ViewModels/: DebuggerViewModel.cs  MainViewModel.cs  PerformanceMonitorViewModel.cs  RelayCommand.cs  SnapshotManagerViewModel.cs  VMDetailsViewModel.cs  VMListItemViewModel.cs  VMScreenViewModel.cs  VMSettingsViewModel.cs  ViewModelBase.cs
guideXOS Hypervisor GUI/Views/: DebuggerView.xaml  DebuggerView.xaml.cs  PerformanceMonitorView.xaml  PerformanceMonitorView.xaml.cs  SnapshotManagerView.xaml  SnapshotManagerView.xaml.cs  VMScreenWindow.xaml  VMScreenWindow.xaml.cs  VMSettingsView.xaml  VMSettingsView.xaml.cs
include/: APISerializer.h  APIServer.h  APITypes.h  BootStageTrace.h  BootTraceSystem.h  CPUContext.h  Console.h  ConsoleOutputBuffer.h  ExampleISAPlugin.h  FATParser.h  FilesystemMount.h  FramebufferDevice.h  Fuzzer.h  IA64EfiHandoffLayout.h  IA64ISAPlugin.h  ICPU.h  ICPUScheduler.h  IDecoder.h  IFilesystem.h  IISA.h  IMMU.h  IMemory.h  IODevice.h  IPCAPIServer.h  ISAPluginRegistry.h  ISO9660Parser.h  IStorageDevice.h  IVirtualMachine.h  InitramfsDevice.h  InterruptController.h  JsonUtils.h  KernelPanic.h  KernelValidator.h  NativeOutputLogger.h  PEParser.h  PageFault.h  PathResolver.h  Profiler.h  RawDiskDevice.h  RestAPIServer.h  (+36 more)
kernels/: kernel.ld.gcc-only  minimal_kernel.c  minimal_kernel.s
src/abi/: abi.cpp
src/api/: RestAPIServer.cpp  VMControlAPIHandler.cpp  VMManager_DLL.cpp  dllmain.cpp
src/core/: cpu.cpp  cpu_core.cpp
src/decoder/: atype_decoder.cpp  btype_decoder.cpp  decoder.cpp  ftype_decoder.cpp  itype_decoder.cpp  lx_decoder.cpp  mtype_decoder.cpp  riscv_decoder.cpp  xtype_decoder.cpp
src/fuzzer/: Fuzzer.cpp
src/io/: Console.cpp  ConsoleOutputBuffer.cpp  (+3 more)
test_programs/: README.md  create_test_binary.c  minimal_test.c
tests/: test_boot_state_machine.cpp  test_bootstrap.cpp  test_cpu_execution.cpp  test_debugger.cpp  test_elf_validation.cpp  test_fuzzer.cpp  test_initramfs.cpp  test_io_devices.cpp  test_isa_plugin.cpp  test_kernel_bootstrap.cpp  test_libc_bridge.cpp  test_main.cpp  test_mmu.cpp  test_mov_imm.cpp  test_multi_cpu.cpp  test_new_instructions.cpp  test_page_fault.cpp  test_profiler.cpp  test_riscv_decoder.cpp  test_riscv_fetch_decode.cpp  test_riscv_minimal_execution.cpp  test_scheduler_stepping.cpp  test_syscall_dispatcher.cpp  test_vm_isolation.cpp  test_vm_reset.cpp  test_vmconfig_serialization.cpp  test_vmmanager.cpp  test_watchpoint.cpp
tools/: codex_ia64_dump.cpp  decoder_diagnostic.cpp
web/: app.js  index.html  style.css
(+69 files in other folders)
